--- a/waitlist.html
+++ b/waitlist.html
@@ -1,1 +1,1 @@
-<html><body><div style="font-size: 200px">628,179</div></body></html>
+<html><body><div style="font-size: 200px; text-align: center">628,195</div></body></html>
