--- a/waitlist.html
+++ b/waitlist.html
@@ -1,1 +1,1 @@
-<html><body><div style="font-size: 200px; text-align: center; margin-top: 400px">628,503</div></body></html>
+<html><body style="background-color: #000"><div style="font-size: 200px; text-align: center; margin-top: 400px; color: #21ce99">628,510</div></body></html>
